# Tracer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
data/sample_inputs/: for_tracing_decode.csv  for_tracing_prefill.csv
data/sample_outputs/: trace_20250711_164704.csv  trace_20250711_164706.csv  trace_20250711_164708.csv  trace_20250711_164711.csv  trace_20250711_164713.csv  trace_20250711_164715.csv  trace_20250711_164718.csv
data/surf_traces/: filtered_decode.csv  filtered_prefill.csv  performance_tracing.csv  raw_decode.csv  raw_prefill.csv
tracer/: config.py  logger.py  sampler.py  tracer.py
tracer/clients/: surf_client.py
